test/files/neg/implicit-override.check
implicit-override.scala:7: error: name clash between defined and inherited member:
def foo(i: Int): Unit in trait C and
def foo(implicit i: Int): Unit at line 7
have same type after erasure: (i: Int)Unit
  def foo(implicit i: Int): Unit
      ^
implicit-override.scala:8: error: name clash between defined and inherited member:
def bar(implicit i: Int): Unit in trait C and
def bar(i: Int): Unit at line 8
have same type after erasure: (implicit i: Int)Unit
  def bar(i: Int): Unit
      ^
two errors found
